--- a/index.css
+++ b/index.css
@@ -4,20 +4,110 @@
 }
 
 
-.calcPosition{
-    
-}
+
 
 .calculator{
     display: grid;
-    min-width: 360px;
-    min-height: 640px;
+    /* width: 360px;
+    height: 640px; */
+
+    grid-template-columns:  repeat(6,50px);
+    grid-template-rows: repeat(6,50px);
+    grid-gap: 10px;
+
+
+
+    justify-content: center;
+    align-content: center;
+    height: 100vh;
+
+    background-color: cadetblue;
+
 }
 
-.screenDisplay{
-    
+.screenDisplay {
+    border: solid;
+    grid-column: 1/-1;
+    grid-row: 1/1;
+
+    background-color:whitesmoke;
+    color: black;
+
+
 }
 
-.buttons{
-    
+h2{
+    display: block;
+    text-align: start;
+    padding-top: 2%;
+}
+.addition ,.subtract,.multiply,.division,.operate{
+
+    grid-column: 1/3;
+}
+
+.zero{
+    grid-column: 4/4;
+
+    grid-row: 2/2;
+}
+.one{
+    grid-column: 5/5;
+
+    grid-row: 2/3;
+}
+.two{
+    grid-column: 6/6;
+
+    grid-row: 2/3;
+}
+.three{
+    grid-column: 4/4;
+
+    grid-row: 3/3;
+}
+.four{
+    grid-column: 5/5;
+
+    grid-row: 3/3;
+}
+.five{
+    grid-column: 6/6;
+
+    grid-row: 3/3;
+}
+.six{
+    grid-column: 4/4;
+
+    grid-row: 4/4;
+}
+.seven{
+    grid-column: 5/5;
+
+    grid-row: 4/4;
+}
+.eight{
+    grid-column: 6/6;
+
+    grid-row: 4/4;
+}
+.nine{
+    grid-column: 4/4;
+
+    grid-row: 5/5;
+}
+.equals{
+    grid-column: 6/6;
+
+    grid-row: 5/5;
+}
+.clear{
+    grid-column: 5/5;
+
+    grid-row: 5/5;
+}
+
+button{
+    width: 100%;
+    height: 100%;
 }
