--- a/index.css
+++ b/index.css
@@ -1,115 +1,60 @@
-*{
-padding: 0%;
-margin: 0%;
+body{
+    padding: 0;
+    margin: 0;
+    background: linear-gradient(to bottom, rgb(8, 129, 189),Purple);
+    box-sizing: border-box;
 }
 
+.calculator-grid{
+    display: grid;
 
+    justify-content: center;
+    align-content: center;
 
-.calculator{
-display: grid;
-/* width: 360px;
-height: 640px; */
-
-grid-template-columns: repeat(6,50px);
-grid-template-rows: repeat(6,50px);
-grid-gap: 10px;
-
-justify-content: center;
-align-content: center;
-height: 100vh;
-
-background-color: cadetblue;
-
+    min-height: 100vh;
+    grid-template-columns: repeat(4, 100px);
+    grid-template-rows: minmax(120px, auto) repeat(5, 100px);
 }
 
-.numbers{
-grid-column: 3/-1;
-grid-row: 3/2;
-
-}
-
-.screenDisplay {
-border: solid;
-grid-column: 1/-1;
-grid-row: 1/1;
-
-background-color:whitesmoke;
-color: black;
-
-}
-
-h2{
-display: inline-block;
-text-align: start;
-padding-top: 3%;
-}
-.addition ,.subtract,.multiply,.division,.operate{
-
-grid-column: 1/3;
-}
-
-/* .zero{
-grid-column: 4/4;
-
-grid-row: 2/2;
-
-.one{
-grid-column: 5/5;
-
-grid-row: 2/3;
-}
-.two{
-grid-column: 6/6;
-
-grid-row: 2/3;
-}
-.three{
-grid-column: 4/4;
-
-grid-row: 3/3;
-}
-.four{
-grid-column: 5/5;
-
-grid-row: 3/3;
-}
-.five{
-grid-column: 6/6;
-
-grid-row: 3/3;
-}
-.six{
-grid-column: 4/4;
-
-grid-row: 4/4;
-}
-.seven{
-grid-column: 5/5;
-
-grid-row: 4/4;
-}
-.eight{
-grid-column: 6/6;
-
-grid-row: 4/4;
-}
-.nine{
-grid-column: 4/4;
-
-grid-row: 5/5;
-} */
-.equals{
-grid-column: 6/6;
-
-grid-row: 6/6;
-}
-.clear{
-grid-column: 5/5;
-
-grid-row: 6/6;
+.output{
+    display: flex;
+    align-items: flex-end;
+    grid-column: 1/-1;
+    background-color:  rgb(0,0,0,0.8);
+    justify-content:0;
+    flex-direction:0;
+    padding: 10px;
+    word-wrap: break-word;
+    word-break: break-all;
+  
 }
 
 button{
-width: 100%;
-height: 100%;
+    color: red;
+    background-color: rgb(0,0,0,0.7);
+    font-size: larger;
+    outline: none;
+    border: 1px solid red;
 }
+
+button:hover{
+    color: red;
+    background-color: rgb(0,0,0,1);
+    cursor: pointer;
+}
+
+.current-operand{
+    color: red;
+    align-items: right;
+    justify-items: center;
+    font-size: 4vh;
+    font-weight: lighter;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.span-two{
+    grid-column: span 2;
+}
+
+
+
